src/sass/settings.scss
/* ... */
body.mobileMode {
    &#secured-invoices,
    &#secured-keys,
    &#secured-members,
    &#secured-domains,
    &#secured-appearance,
    &#secured-security,
    &#secured-labels,
    &#secured-dashboard,
    &#secured-account {
        overflow: initial;
    }
}
body.mobileMode {
    #pm_settings {
        #settingsDomains {
            .pm_table {
                &.pm_form.bordered {
                    tr td.text-right {
                        float: none;
                    }
                }
                tbody {
                    tr {
                        td {
                            display: block;
                            width: 100%;
                            .pm_button {
                                text-align: left;
                                padding-left: 1rem;
                                width: 10rem;
                                strong {
                                    display: inline;
                                }
                                span {
                                    float: none;
                                }
                            }
                            span {
                                float: none !important;
                            }
                        }
                        td.text-right {
                            text-align: left !important;
                            .pm_button {
                                width: 36px !important;
                                text-align: center !important;
                                padding: 0 !important;
                            }
                        }
                    }
                }
            }
        }
        .settings {
            table.pm_table {
                border: none;
                tr {
                    border: 1px solid $border;
                    display: block;
                    margin-bottom: 2rem;
                    padding: 0;
                    td {
                        display: block;
                        height: auto !important;
                        border-bottom: 1px solid $border;
                        &.text-right {
                            text-align: left;
                        }
                        code {
                            display: none;
                        }
                    }
                }
            }
        }
    }
}

#paymentsModal {
    th.desc,
    td.desc {
        padding-right: 0;
        .space {
            width: 20px;
            display: inline-block;
        }
    }

    th.price,
    td.price {
        padding-left: 0;
        width: 65px;
    }

    .disabled {
        input,
        select {
            cursor: default;
            pointer-events: none;
            background-color: $read;
        }
    }

}


body.mobileMode {
    #settingsDomains,
    #settingsAddresses {
        display: none;
    }
}

